# scmake

./: README.md
sample.0/: CMakeLists.txt  SCMakeConfig.h.in  main.c
